Move eegeo mobile sdk harness into com.eegeo.mobilesdkharness so that we can install it on a device side-by-side with the example app. Also re-labelled it EegeoMobileSdkHarness to avoid confusion.  Buddy: Ian H

--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <com.eegeo.EegeoSurfaceView
+    <com.eegeo.mobilesdkharness.EegeoSurfaceView
         android:id="@+id/surface"
     	android:layout_width="fill_parent" 
     	android:layout_height="fill_parent"/>
