--- a/android/res/layout/routing_service_menu_layout.xml
+++ b/android/res/layout/routing_service_menu_layout.xml
@@ -10,7 +10,7 @@
 	    android:paddingTop="16dp"
 	    android:paddingLeft="16dp"
 	    android:paddingRight="16dp" >
-	    
+
 	    <Button
 	        android:id="@+id/move_down"
 	        android:layout_width="96dp"
@@ -30,7 +30,12 @@
 	        android:layout_height="wrap_content"
 	        android:layout_above="@+id/move_up"
 	        android:text="Get Route" />
-
+		<Button
+			android:id="@+id/toggle_expanded"
+			android:layout_width="96dp"
+			android:layout_height="wrap_content"
+			android:layout_above="@+id/get_route"
+			android:text="Toggle Expanded" />
 	</RelativeLayout>
 	
 </RelativeLayout>
